# Seminar

Tuan_1/github-copilot-vibe-coding-workshop/: Dockerfile.dotnet  Dockerfile.java  Dockerfile.javascript  Dockerfile.python  Note.md  compose-js-python.yaml  compose.yaml  figma.md
Tuan_1/github-copilot-vibe-coding-workshop/dotnet/Contoso.BlazorApp/: appsettings.Development.json  appsettings.json
Tuan_1/github-copilot-vibe-coding-workshop/javascript/SimpleSocialMediaApplication/src/: App.jsx
Tuan_1/github-copilot-vibe-coding-workshop/python/: main.py  sns_api.db
Tuan_2/n8n-project/: README.md
Udemy/Week1/day1/fps-arena/: README.md  index.html  main.js  style.css
Udemy/Week1/day2/gpt5_2_kanban/frontend/: .gitignore  README.md  package-lock.json  package.json
Udemy/Week1/day4/professional-site/: package-lock.json  package.json  review.md  tutorial.md
Udemy/Week1/day5/pm/: .dockerignore  Dockerfile  docker-compose.yml
Udemy/Week1/day5/pm/backend/: AGENTS.md  pyproject.toml
Udemy/Week1/day5/pm/backend/app/: kanban_repository.py  main.py  openrouter_client.py
Udemy/Week1/day5/pm/backend/app/static/: index.html
Udemy/Week1/day5/pm/backend/tests/: test_board_api.py  test_chat_api.py  test_main.py  test_repository.py
Udemy/Week1/day5/pm/docs/: PART2.md  PLAN.md
Udemy/Week1/day5/pm/frontend/: AGENTS.md  next.config.ts  vitest.config.ts
Udemy/Week1/day5/pm/scripts/: AGENTS.md  start.ps1  start.sh  stop.ps1  stop.sh
Udemy/Week3/day1/finally/: README.md
Udemy/Week3/day3/: index.html  main.py  script.js  style.css
(+35 files in other folders)
